Added cases indecator + cities

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-leaflet": "^2.6.3",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-scrollable-list": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
