--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,13 +5,12 @@ name: Deploy to GitHub pages
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -19,16 +18,20 @@ jobs:
         node-version: [13.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install Packages
-      run: npm install
-    - name: Deploy to GH Pages
-      run: |
-        git config --global user.email "mehdi.bounya@gmail.com"
-        git config --global user.name "mehdibo"
-        git remote set-url origin https://${{ secrets.githubToken }}@github.com/mehdibo/coronamap-ma.git
-        npm run deploy
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install Packages
+        run: npm install
+      - name: Update the data
+        run: |
+          cd src
+          node parseData.js
+      - name: Deploy to GH Pages
+        run: |
+          git config --global user.email "mehdi.bounya@gmail.com"
+          git config --global user.name "mehdibo"
+          git remote set-url origin https://${{ secrets.githubToken }}@github.com/mehdibo/coronamap-ma.git
+          npm run deploy
